# TestCMake

./: .gitignore  CMakeLists.txt  main.cpp
Util/: Util.cpp  Util.h
